add latency, rrul, loss cases. first draft. plus german abstract

--- a/frontmatter/summary.tex
+++ b/frontmatter/summary.tex
@@ -7,8 +7,10 @@
 \section*{Abstract}
 
 TODO
-%\newpage
-%\addcontentsline{toc}{section}{Zusammenfassung}
-%\section*{Zusammenfassung}
 
-%Der Aufstieg des Internet of Things (IoT) stellt uns vor neue Herausforderungen bezueglich der Speicherung, Verarbeitung und Darstellung von Daten
+%%=========================================
+\cleardoublepage
+\addcontentsline{toc}{section}{Zusammenfassung}
+\section*{Zusammenfassung}
+
+TODO
