--- a/thesis.tex
+++ b/thesis.tex
@@ -194,7 +194,8 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 %Backmatter
 
 \appendix
-%\include{backmatter/04_example_qagent}
+%\include{backmatter/01_formats}
+\include{backmatter/02_example_gtp}
 % Include more appendices as required.
 
 \cleardoublepage
